Doc fix - part 2
