# public/sn_client_resources/site_api_docs/openapi.yaml
@@ -16,9 +16,6 @@ tags:
   -
     name: 'Api Token Endpoints'
     description: ''
-  -
-    name: Endpoints
-    description: ''
 paths:
   /site_api/v1/csrf-cookie:
     get:
@@ -635,20 +632,3 @@ paths:
               required:
                 - api_token
                 - _sn_record_json
-  /site_api/v1/sse_stream:
-    get:
-      summary: ''
-      operationId: getSite_apiV1Sse_stream
-      description: ''
-      parameters: []
-      responses:
-        400:
-          description: ''
-          content:
-            text/plain:
-              schema:
-                type: string
-                example: "<!DOCTYPE html>\n<html lang=\"en\">\n<head>\n    <meta charset=\"UTF-8\" />\n    <meta name=\"robots\" content=\"noindex,nofollow,noarchive\" />\n    <title>An Error Occurred: Bad Request</title>\n    <link rel=\"icon\" href=\"data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>❌</text></svg>\" />\n    <style>body { background-color: #fff; color: #222; font: 16px/1.5 -apple-system, BlinkMacSystemFont, \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial, sans-serif; margin: 0; }\n.container { margin: 30px; max-width: 600px; }\nh1 { color: #dc3545; font-size: 24px; }\nh2 { font-size: 18px; }</style>\n</head>\n<body>\n<div class=\"container\">\n    <h1>Oops! An Error Occurred</h1>\n    <h2>The server returned a \"400 Bad Request\".</h2>\n\n    <p>\n        Something is broken. Please let us know what you were doing when this error occurred.\n        We will fix it as soon as possible. Sorry for any inconvenience caused.\n    </p>\n</div>\n</body>\n</html>"
-      tags:
-        - Endpoints
-      security: []
